--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sanitize-html",
+  "name": "sanitize-html-hacked",
   "version": "1.25.0",
   "description": "Clean up user-submitted HTML, preserving whitelisted elements and whitelisted attributes on a per-element basis",
   "sideEffects": false,
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apostrophecms/sanitize-html.git"
+    "url": "https://github.com/HuuLane/sanitize-html.git"
   },
   "keywords": [
     "html",
